src/objects/Brewing_System__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cafitesse__c</fullName>
        <label>Cafitesse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Espresso__c</fullName>
        <label>Espresso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freshbrew__c</fullName>
        <label>Freshbrew</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instant__c</fullName>
        <label>Instant</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promesso__c</fullName>
        <label>Promesso</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Brewing System</label>
</CustomObject>